[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "truststore>=0.10.4",
]
